src/test/deca/syntax/valid/resultats/test3_minimal-lex.res
'{': [@0,229:229='{',<36>,14:0]
'println': [@1,232:238='println',<18>,15:1]
'(': [@2,239:239='(',<34>,15:8]
STRING: [@3,240:246='"Hello"',<47>,15:9]
')': [@4,247:247=')',<35>,15:16]
';': [@5,248:248=';',<39>,15:17]
'}': [@6,250:250='}',<37>,16:0]
