src/test/deca/syntax/invalid/resultats/test37_class_decl-lex.res
IDENT: [@0,334:340='private',<26>,15:0]
'class': [@1,342:346='class',<7>,15:8]
IDENT: [@2,348:348='A',<26>,15:14]
'{': [@3,350:350='{',<36>,15:16]
'}': [@4,352:352='}',<37>,16:0]
